force-app/main/Home/objects/Nuvitek_Message__c/Nuvitek_Message__c.object-meta.xml
<CustomObject>
    <description>Stores messages between users and various recipients (Users, Contacts, Accounts, Leads, etc.)</description>
    <label>Nuvitek Message</label>
    <nameField>
        <displayFormat>MSG-{00000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nuvitek Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>