force-app/main/Home/objects/Nuvitek_Message__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The content of the message</description>
    <inlineHelpText>The text content of the message</inlineHelpText>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>