force-app/main/Home/objects/Nuvitek_Message__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the message has been read by the recipient</description>
    <inlineHelpText>Check this field if the message has been read by the recipient</inlineHelpText>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>