force-app/main/Home/objects/Nuvitek_Message__c/fields/Recipient_Account__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account who is the recipient of the message</description>
    <label>Recipient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>