force-app/main/Home/objects/Nuvitek_Message__c/fields/Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact who is the recipient of the message</description>
    <label>Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>