force-app/main/Home/objects/Nuvitek_Message__c/fields/Recipient_Lead__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead who is the recipient of the message</description>
    <label>Recipient Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>