force-app/main/Home/objects/Nuvitek_Message__c/fields/Recipient_User__c.field-meta.xml
<CustomField>
    <fullName>Recipient_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who is the recipient of the message</description>
    <label>Recipient User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Messages_Received</relationshipName>
    <type>Lookup</type>
</CustomField>