force-app/main/Home/objects/Nuvitek_Message__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who sent the message</description>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Messages_Sent</relationshipName>
    <type>Lookup</type>
</CustomField>